<resources>
    <string name="app_name">Summaries Of DYHDM</string>
    <string name="文件存储">文件存储</string>
    <string name="SP存储">SP存储</string>
    <string name="SQLite存储">SQLite存储</string>
    <string name="LitePal存储">LitePal存储</string>
    <string name="type_something_here">Type something here</string>
    <string name="account">account:</string>
    <string name="login">login</string>
    <string name="remember_password">remember_password</string>
    <string name="password">Password:</string>
    <string name="创建数据库">创建数据库</string>
    <string name="添加数据">添加数据</string>
    <string name="更新数据">更新数据</string>
    <string name="删除数据">删除数据</string>
    <string name="查询数据">查询数据</string>
    <string name="打电话给10086">打电话给10086</string>
    <string name="读取手机联系人">读取手机联系人</string>
    <string name="发送高级通知">发送高级通知</string>
    <string name="调用相机和相册">调用相机和相册</string>
    <string name="发送">发送</string>
    <string name="高级通知就是刚才你点的那个东西">高级通知就是刚才你点的那个东西</string>
    <string name="调用相机">调用相机</string>
    <string name="从相册中选取照片">从相册中选取照片</string>
    <string name="播放音乐">播放音乐</string>
    <string name="暂停播放">暂停播放</string>
    <string name="停止播放">停止播放</string>
    <string name="WebView加载网页">WebView加载网页</string>
    <string name="HttpURLconnection请求数据">HttpURLconnection请求数据</string>
    <string name="OkHttp请求数据">OkHttp请求数据</string>
    <string name="JsonObject解析数据">JsonObject解析数据</string>
    <string name="Gson解析数据">Gson解析数据</string>
    <string name="开始请求数据">开始请求数据</string>
    <string name="请求并数据">请求并数据</string>
    <string name="请求并解析数据">请求并解析数据</string>
    <string name="开始下载">开始下载</string>
    <string name="暂停下载">暂停下载</string>
    <string name="停止下载">停止下载</string>
    <string name="tonygreendev_gmail_com">tonygreendev_gmail_com</string>
    <string name="tony_green">tony_green</string>
    <string name="backup">backup</string>
    <string name="delete">delete</string>
    <string name="setting">setting</string>
    <string name="mail">mail</string>
    <string name="location">location</string>
    <string name="friends">friends</string>
    <string name="call">call</string>
</resources>
