<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sixth_database.TheSixthChapterActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <!--文件存储按钮-->

    <Button
        android:id="@+id/btn_file_store"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:text="@string/文件存储"
        android:background="@drawable/btn_bg_rectangle_selector"
        style="?attr/borderlessButtonStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!--SharedPreferences存储按钮-->

    <Button
        android:id="@+id/btn_sp_store"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:text="@string/SP存储"
        android:background="@drawable/btn_bg_rectangle_selector"
        style="?attr/borderlessButtonStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!--SQLite数据库存储按钮-->

    <Button
        android:id="@+id/btn_sql_store"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:text="@string/SQLite存储"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg_rectangle_selector"
        style="?attr/borderlessButtonStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!--LitePal存储按钮-->

    <Button
        android:id="@+id/btn_lp_store"
        style="?attr/borderlessButtonStyle"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg_rectangle_selector"
        android:text="@string/LitePal存储"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="25sp" />

</LinearLayout>