<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".eighth_multimedia.PlayMusicActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:text="@string/播放音乐"
        android:background="@drawable/btn_bg_rectangle_selector"
        style="?attr/borderlessButtonStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:text="@string/暂停播放"
        android:background="@drawable/btn_bg_rectangle_selector"
        style="?attr/borderlessButtonStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_stop"
        style="?attr/borderlessButtonStyle"
        android:layout_width="350dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg_rectangle_selector"
        android:text="@string/停止播放"
        android:textColor="#ffffff"
        android:textSize="25sp" />

</LinearLayout>