<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tenth_service.MyActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/btn_start_download"
        style="?attr/borderlessButtonStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg_rectangle_selector"
        android:text="@string/开始下载"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="25sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_paused_download"
        style="?attr/borderlessButtonStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg_rectangle_selector"
        android:text="@string/暂停下载"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btn_cancel_download"
        style="?attr/borderlessButtonStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg_rectangle_selector"
        android:text="@string/停止下载"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="25sp" />


</LinearLayout>